--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ react-app/build
 
 # misc
 react-app/.DS_Store
+react-app/.env
 react-app/.env.local
 react-app/.env.development.local
 react-app/.env.test.local
@@ -42,3 +43,5 @@ react-app/.env.production.local
 react-app/npm-debug.log*
 react-app/yarn-debug.log*
 react-app/yarn-error.log*
+
+react-app/.eslintcache
