--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (web)",
+            "name": "App MVC",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -26,6 +26,18 @@
                 "/Views": "${workspaceFolder}/Views"
             },
             "requireExactSource": false
+        },
+        
+        {
+            "name": "App WPF",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "buildvb",
+            "program": "${workspaceFolder}/PedidosWPF/bin/Debug/net6.0-windows/PedidosWPF.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "integratedTerminal"
         }
     ]
 }
